<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="#3F51B5"
        android:text="@string/textviewForm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textviewApellido"
        app:layout_constraintStart_toStartOf="@+id/textViewComent"
        app:layout_constraintTop_toBottomOf="@+id/textViewComent" />

    <TextView
        android:id="@+id/textViewCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textviewCorreo"
        app:layout_constraintStart_toStartOf="@+id/textViewApellido"
        app:layout_constraintTop_toBottomOf="@+id/textViewApellido" />

    <TextView
        android:id="@+id/textViewClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textviewClave"
        app:layout_constraintStart_toStartOf="@+id/textViewCorreo"
        app:layout_constraintTop_toBottomOf="@+id/textViewCorreo" />

    <TextView
        android:id="@+id/textViewFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textviewFecha"
        app:layout_constraintStart_toStartOf="@+id/textViewClave"
        app:layout_constraintTop_toBottomOf="@+id/textViewClave" />

    <TextView
        android:id="@+id/textViewCarrera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textviewCarrera"
        app:layout_constraintStart_toStartOf="@+id/textViewFecha"
        app:layout_constraintTop_toBottomOf="@+id/textViewFecha" />

    <TextView
        android:id="@+id/textViewPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:text="@string/textviewPregunta"
        app:layout_constraintStart_toStartOf="@+id/textViewCarrera"
        app:layout_constraintTop_toBottomOf="@+id/textViewCarrera" />

    <TextView
        android:id="@+id/textViewComent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/textviewComent"
        android:textColor="#3F51B5"
        app:layout_constraintStart_toStartOf="@+id/textViewForm"
        app:layout_constraintTop_toBottomOf="@+id/textViewForm" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewApellido"
        app:layout_constraintStart_toEndOf="@+id/textViewApellido"
        app:layout_constraintTop_toTopOf="@+id/textViewApellido" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCorreo"
        app:layout_constraintStart_toEndOf="@+id/textViewCorreo"
        app:layout_constraintTop_toTopOf="@+id/textViewCorreo" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/textViewClave"
        app:layout_constraintStart_toEndOf="@+id/textViewClave"
        app:layout_constraintTop_toTopOf="@+id/textViewClave" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFecha"
        app:layout_constraintStart_toEndOf="@+id/textViewFecha"
        app:layout_constraintTop_toTopOf="@+id/textViewFecha" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/textViewCarrera"
        app:layout_constraintTop_toBottomOf="@+id/textViewCarrera">

        <RadioButton
            android:id="@+id/radioButtonSistemas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSistemas" />

        <RadioButton
            android:id="@+id/radioButtonAmbiental"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAmbiental" />

        <RadioButton
            android:id="@+id/radioButtonMecanica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonMecanica" />

        <RadioButton
            android:id="@+id/radioButtonAdministracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAdministracion" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkboxRadio"
        app:layout_constraintStart_toStartOf="@+id/textViewPregunta"
        app:layout_constraintTop_toBottomOf="@+id/textViewPregunta" />

    <CheckBox
        android:id="@+id/checkBoxInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/checkboxInternet"
        app:layout_constraintStart_toStartOf="@+id/checkBoxRadio"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRadio" />

    <CheckBox
        android:id="@+id/checkBoxAmigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkboxAmigo"
        app:layout_constraintStart_toStartOf="@+id/checkBoxInternet"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxInternet" />

    <CheckBox
        android:id="@+id/checkBoxPublicidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkboxPublicidad"
        app:layout_constraintStart_toStartOf="@+id/checkBoxAmigo"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAmigo" />

    <Button
        android:id="@+id/ButtonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:background="#3F51B5"
        android:backgroundTint="#3F51B5"
        android:drawableLeft="@drawable/baseline_backup_24"
        android:text="@string/buttonEnviar"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxPublicidad"
        app:layout_constraintStart_toEndOf="@+id/checkBoxPublicidad"
        app:layout_constraintTop_toTopOf="@+id/checkBoxPublicidad"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/textviewButton"
        app:layout_constraintBottom_toBottomOf="@+id/ButtonEnviar"
        app:layout_constraintEnd_toStartOf="@+id/ButtonEnviar"
        app:layout_constraintTop_toTopOf="@+id/ButtonEnviar" />
</androidx.constraintlayout.widget.ConstraintLayout>